--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "@dashup/module",
   "description": "nothing yet",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "dependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/register": "^7.13.8",
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "@edenjs/glob": "^1.0.0",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
-    "core-js": "^3.9.1",
+    "core-js": "^3.14.0",
     "dot-prop": "^6.0.1",
     "fast-deep-equal": "^3.1.3",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "minify-stream": "^2.1.0",
-    "riot": "^5.3.1",
+    "sassify": "^4.0.1",
     "shortid": "^2.2.16",
     "socket.io-client": "^2.3.1",
     "spinnies": "^0.5.1",
