--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dashup/module",
   "description": "nothing yet",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-transform-runtime": "^7.14.5",
@@ -17,12 +17,11 @@
     "dot-prop": "^6.0.1",
     "fast-deep-equal": "^3.1.3",
     "fs-extra": "^10.0.0",
-    "minify-stream": "^2.1.0",
     "sassify": "^4.0.1",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.1.2",
     "spinnies": "^0.5.1",
-    "uglifyify": "^5.0.2",
+    "tinyify": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "engines": {
