--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dashup/module",
   "description": "nothing yet",
-  "version": "2.0.12",
+  "version": "2.0.15",
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
@@ -29,6 +29,7 @@
     "node": ">= 8.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@dashup/eslint": "0.0.1"
   }
 }
